[gd_scene load_steps=4 format=2]

[ext_resource path="res://Font/Arial.tres" type="DynamicFont" id=1]
[ext_resource path="res://Font/Arial_Title.tres" type="DynamicFont" id=2]
[ext_resource path="res://GUI/settings/Settings.gd" type="Script" id=3]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 356.0
margin_right = 640.0
margin_bottom = 464.0
custom_fonts/font = ExtResource( 2 )
text = "Ayarlar"
align = 1
valign = 1
autowrap = true

[node name="Radius" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 468.0
margin_right = 640.0
margin_bottom = 532.0
mouse_filter = 2
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Radius"]
margin_left = 63.0
margin_top = 14.0
margin_right = 172.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 1 )
text = "Yarıçap"

[node name="HSliderRad" type="HSlider" parent="VBoxContainer/Radius"]
margin_left = 197.0
margin_right = 497.0
margin_bottom = 64.0
rect_min_size = Vector2( 300, 64 )
mouse_filter = 1
min_value = 64.0
max_value = 500.0
value = 64.0

[node name="SlideValue" type="Label" parent="VBoxContainer/Radius"]
margin_left = 522.0
margin_top = 14.0
margin_right = 576.0
margin_bottom = 50.0
rect_min_size = Vector2( 54, 0 )
custom_fonts/font = ExtResource( 1 )
text = "000"

[node name="SideNum" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 536.0
margin_right = 640.0
margin_bottom = 600.0
mouse_filter = 2
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/SideNum"]
margin_left = 26.0
margin_top = 14.0
margin_right = 210.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 1 )
text = "Kenar Sayısı"

[node name="HSliderSide" type="HSlider" parent="VBoxContainer/SideNum"]
margin_left = 235.0
margin_right = 535.0
margin_bottom = 64.0
rect_min_size = Vector2( 300, 64 )
mouse_filter = 1
min_value = 12.0
value = 12.0

[node name="SlideValue" type="Label" parent="VBoxContainer/SideNum"]
margin_left = 560.0
margin_top = 14.0
margin_right = 614.0
margin_bottom = 50.0
rect_min_size = Vector2( 54, 0 )
custom_fonts/font = ExtResource( 1 )
text = "000"

[node name="ReturnTitle" type="TextureButton" parent="VBoxContainer"]
margin_top = 604.0
margin_right = 640.0
margin_bottom = 668.0
rect_min_size = Vector2( 0, 64 )
mouse_filter = 1

[node name="Label" type="Label" parent="VBoxContainer/ReturnTitle"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Menüye Dön"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="change_timer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="value_changed" from="VBoxContainer/Radius/HSliderRad" to="." method="_on_HSliderRad_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SideNum/HSliderSide" to="." method="_on_HSliderSide_value_changed"]
[connection signal="pressed" from="VBoxContainer/ReturnTitle" to="." method="_on_ReturnTitle_pressed"]
[connection signal="timeout" from="change_timer" to="." method="_on_change_timer_timeout"]
